--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -7,7 +7,7 @@
 //&display=swap - додати при підключенні через плагін
 
 // Підключити, якщо є локальні файли шрифтів
-// @import "fonts/fonts";
+@import "fonts/fonts";
 @import url(https://fonts.googleapis.com/css?family=Poppins:regular,600,700);
 // Підключення іконкових шрифтів ==============================================================================================================================================================================================================================================================================
 // Підключити, якщо є файл іконкового шрифту
