--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -144,6 +144,7 @@ body {
 // Підключення базових стилів, шаблонів (заготівель) та допоміжних класів
 // Для підключення/вимкнення конкретних стилів дивись base.scss
 @import "base";
+@import "base/popup";
 
 // Підключення стилів загальних елементів проекту
 @import "common";
@@ -156,6 +157,7 @@ body {
 @import "technologies";
 @import "about";
 @import "animation";
+@import "education";
 // Підключення стилів окремих сторінок
 @import "home";
 
